masterstyle.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow-x: hidden;
}

html {
  font-size: calc(1vh + 7px);
}

body {
  background-color: black;
}

.classic {
  width: 15.5rem;
  height: 0.5rem;
  margin-bottom: 2vh;
  margin-top: -1vh;
}

.centered-classic {
  margin-left: 40vw;
  margin-right: 40vw;
  width: 15rem;
  height: 0.5rem;
}

.home {
  height: 100%;
  width: 100%;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
}

.home-content-with-img {
  width: max(32rem, 40vw);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin: auto;
  margin-left: 10vw;
}

.home-content {
  width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: auto;
  margin-left: 10vw;
}
.home-content-with-img h2 {
  font-size: 4rem;
}

.home-img {
  width: 35%;
  margin-right: 10vw;
  object-fit: contain;
}

header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 10vh;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: 0.2s;
  opacity: 0.7;
  z-index: 999;
}

header.sticky {
  background: black;
  opacity: 0.85;
}

header .logo-box {
  position: relative;
  left: 3vw;
  height: 100%;
}

header .logo-box img {
  max-width: 90%;
  max-height: 90%;
  margin-top: 1vh;
}

header ul {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
}

header ul li {
  position: relative;
  list-style: none;
  height: 10vh;
  padding-top: 3.5vh;
}

header ul li a {
  position: relative;
  margin: 0 5vw 0 0;
  text-decoration: none;
  color: #fff;
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-size: 1.25rem;
  transition: 0.6s;
}

header ul li a::before,
header ul li a::after {
  content: "";
  position: absolute;
  width: 100%;
  height: 2px;
  background-color: #ffd382;
  left: 0;
  transform: scaleX(0);
  transition: all 0.3s;
}

header ul li a::before {
  top: -0.5vh;
  transform-origin: left;
}

header ul li a::after {
  bottom: -0.5vh;
  transform-origin: right;
}

header:hover {
  opacity: 1;
}

header ul li a:hover::before,
header ul li a:hover::after {
  transform: scaleX(1);
}

.dropdown {
  position: relative;
  visibility: hidden;
  display: block;
  height: 10vh;
  left: 0;
  opacity: 0;
  padding: 0%;
  margin-left: 0;
  width: auto;
  transition: all 200ms ease-in-out;
  transform: translate(-2.5vw);
}
.dropdown li {
  position: relative;
  list-style: none;
  text-align: center;
  background-color: black;
  transform: translate(0vw, 1vh);
}
.dropdown li a {
  margin: 0%;
  font-size: 1rem;
}
.seniors {
  position: relative;
  width: 100%;
  height: 50%;
}

.juniors {
  position: relative;
  width: 100%;
  height: 50%;
}

.tips {
  position: relative;
  width: 100%;
  height: 50%;
}

.more {
  position: relative;
  width: 100%;
  height: 50%;
}

.dropdown2 {
  position: relative;
  visibility: hidden;
  display: block;
  opacity: 0;
  left: 100%;
  top: -7vh;
  padding: 0%;
  width: auto;
  transition: opacity 200ms ease-in-out;
}

.dropdown2 li {
  position: relative;
  list-style: none;
  text-align: center;
  background-color: black;
}

.dropdown2 li a {
  margin: 0%;
  font-size: 1rem;
}

.mob {
  display: none;
}

.history:hover > .dropdown {
  visibility: visible;
  opacity: 1;
}

.teams:hover > .dropdown {
  visibility: visible;
  opacity: 1;
}

.seniors:hover > .dropdown2 {
  visibility: visible;
  opacity: 1;
}

.juniors:hover > .dropdown2 {
  visibility: visible;
  opacity: 1;
}

.resources:hover > .dropdown {
  visibility: visible;
  opacity: 1;
}

.dropdown:hover {
  visibility: visible;
  opacity: 1;
}

.tips:hover > .dropdown2 {
  visibility: visible;
  opacity: 1;
}

.more:hover > .dropdown2 {
  visibility: visible;
  opacity: 1;
}

.dropdown2:hover {
  visibility: visible;
  opacity: 1;
}

.burger div {
  width: 25px;
  height: 3px;
  margin: 5px;
  background-color: white;
  transition: all 0.3s ease;
}

.burger {
  margin-right: 10vw;
  display: none;
  cursor: pointer;
}

.nav-toggle {
  transform: translateX(0%);
}
.toggle .line1 {
  transform: rotate(-45deg) translate(-5px, 6px);
}
.toggle .line2 {
  opacity: 0;
}
.toggle .line3 {
  transform: rotate(45deg) translate(-5px, -6px);
}

.dropped {
  transform: rotate(225deg);
  color: #ffd382;
}

.sub-link {
  height: 7vh;
  padding-top: 1.5vh;
  padding-bottom: 0vh;
  align-items: center;
}
@keyframes navLinkAni {
  from {
    opacity: 0;
    transform: translateX(50px);
  }
  to {
    opacity: 1;
    transform: translateX(0px);
  }
}

h1 {
  font-family: "Poppins", sans-serif;
  color: white;
  font-size: 5rem;
}

h2 {
  font-family: "Poppins", sans-serif;
  color: white;
  font-size: 2.5rem;
}

h3 {
  font-family: "Poppings", sans-serif;
  color: white;
  font-size: 2rem;
}

h4 {
  font-family: "Poppings", sans-serif;
  color: white;
  font-size: 1.5rem;
}

h5 {
  font-family: "Poppings", sans-serif;
  color: white;
  font-size: 1rem;
}

p {
  font-family: "Poppins", sans-serif;
  color: #adadad;
  font-size: 1rem;
  line-height: 162%;
  margin-top: 0vh;
}

.rect {
  background-color: #ffd382;
  border-radius: 43px;
}

button {
  border: none;
  width: 8rem;
  height: 2rem;
  border-radius: 43px;
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  font-style: normal;
  font-size: 1.1rem;
  text-align: center;
  cursor: pointer;
}

.button-style {
  background-color: transparent;
  color: #ffd382;
  border: 2px solid #ffd382;
  transition-duration: 0.2s;
}

.button-style2 {
  background-color: #ffd382;
  color: black;
  border: 2px solid #ffd382;
  transition-duration: 0.3s;
}

.home-button:hover {
  background-color: #ffd382;
  color: black;
}

button:focus {
  outline: none;
  transform: scale(1.08);
  background-color: #ffd382;
  color: black;
}

button:active {
  background-color: #ffdea1 !important;
}

.arrow-box {
  position: absolute;
  bottom: 3vh;
  left: 0vw;
  width: 100vw;
  height: 33.94px;
  display: flex;
  justify-content: center;
}

.arrow-down {
  border: solid #b8b8b8;
  opacity: 0.5;
  height: 0px;
  border-width: 0px 2px 2px 0px;
  padding: 11px;
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transition: border 0.5s;
  transition: opacity 1s;
}

.arrow-up {
  border: solid #b8b8b8;
  opacity: 0.5;
  height: 0px;
  border-width: 0px 2px 2px 0px;
  padding: 11px;
  transform: rotate(-135deg);
  -webkit-transform: rotate(-135deg);
  transition: border 0.5s;
  transition: opacity 1s;
}

.arrow-down:hover {
  opacity: 1;
  border: solid #ffd382;
  border-width: 0px 2px 2px 0px;
  height: 0px;
}
.arrow-up:hover {
  opacity: 1;
  border: solid #ffd382;
  border-width: 0px 2px 2px 0px;
  height: 0px;
}

.home-page {
  height: 100vh;
  width: 100vw;
}

.grey-page {
  width: 100vw;
  background-color: #464444;
}

.grey-title-content {
  position: relative;
  width: 100vw;
  display: grid;
  justify-content: center;
  text-align: center;
}

.greeting-text {
  margin-top: 10vh;
}

.grey-text-box {
  width: 100vw;
  margin-top: 10vh;
  display: flex;
  justify-content: center;
}

.grey-text {
  width: 66vw;
  text-align: center;
  line-height: 2rem;
}

footer {
  height: max(30vh, 10rem);
  width: 100%;
  margin-bottom: 0vh;
  padding-left: 5vw;
  padding-right: 5vw;
  background-color: #464444;
  display: flex;
  justify-content: space-between;
}

.main-content {
  flex-basis: 45%;
  margin-top: auto;
  margin-bottom: auto;
  line-height: 4rem;
}

.main-content img {
  height: 2.5rem;
  margin-right: 1rem;
}

.up {
  flex-basis: 10%;
  height: 33.94px;
  margin: auto;
  display: flex;
  justify-content: center;
}

.arrow-box-up {
  margin: auto;
}

.list-content {
  flex-basis: 45%;
  height: 100%;
  display: flex;
  flex-direction: row;
}
.list-content ul {
  margin: auto;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  flex-wrap: wrap;
  list-style: none;
}

.list-content ul li a {
  position: relative;
  margin: 1vw;
  text-decoration: none;
  color: #ffd382;
  font-family: "Poppins", sans-serif;
  font-weight: 300;
  font-size: 1.2rem;
  transition: 0.6s;
}
/* center-aligner
.block {
  position: absolute;
  height: 500vh;
  width: 10px;
  left: 50vw;
  top: 0;
  background-color: white;
  opacity: 0.5;
} */
.sub-link {
  display: none;
}

@media screen and (max-width: 1024px) {
  .home {
    flex-wrap: wrap;
  }

  .home-content-with-img {
    width: 80%;
    margin: auto;
    margin-bottom: 0vh;
    margin-left: 10vw;
  }

  .home-img {
    height: 35%;
    width: 70%;
    margin: auto;
    margin-top: 5vh;
  }
}

@media screen and (max-width: 680px) {
  html {
    font-size: calc(0.8vh + 7px);
  }
  .burger {
    display: block;
  }

  header {
    background-color: black;
    opacity: 1;
  }

  header ul {
    position: absolute;
    top: 10vh;
    right: 0px;
    height: 90vh;
    width: 60vw;
    background: rgba(31, 30, 30, 0.99);
    flex-direction: column;
    justify-content: flex-start;
    transform: translateX(100%);
    transition: transform 0.3s ease-in;
  }
  header ul li {
    opacity: 0;
    width: 100%;
    padding-left: 15vw;
  }

  .dropdown li {
    opacity: 0;
    background-color: rgba(31, 30, 30, 0);
  }
  header ul li a {
    cursor: pointer;
  }
  .sub-link {
    display: block;
  }

  .goldText a {
    color: #ffd382;
    margin-left: 3vw;
    font-size: 1.1rem;
  }
  .mob {
    display: inline-block;
    float: right;
    margin-right: 10vw;
  }
  .dropdown {
    transform: translateX(100%);
  }
  .grey-text {
    width: 88vw;
    font-size: 1.5rem;
  }

  .home-content-with-img {
    width: 80%;
  }
  .home-content {
    width: 100%;
  }

  .home-img {
    width: 80%;
    margin-left: 10vw;
  }

  .button-style {
    border: min(0.5vh, 2px) solid #ffd382;
  }

  .grey-title-content {
    top: 5vh;
  }
  .greeting-text {
    margin-top: 5vh;
  }

  .grey-text-box {
    margin-top: 8vh;
  }
  h1 {
    font-size: 4.8rem;
  }
  .list-content {
    display: none;
    flex-basis: 0%;
  }
  .main-content {
    flex-basis: 80%;
  }
  .centered-classic {
    margin-left: 30vw;
    margin-right: 30vw;
    width: 40vw;
  }
}

@media screen and (max-width: 320px) {
  h1 {
    font-size: 3.9rem;
  }
  p {
    font-size: 0.8rem;
  }
}

